New infra structure

--- a/apps/xchroma/conf/config-act.properties
+++ b/apps/xchroma/conf/config-act.properties
@@ -16,3 +16,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 discord.channel.general=586633687915823106
 
 test=true
+ai.url=http://localhost:8000
