--- a/apps/xchroma/conf/config.properties
+++ b/apps/xchroma/conf/config.properties
@@ -14,3 +14,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/xchroma?useUnicode=true&charac
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+ai.url=http://localhost:8000
